--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,4 @@
-<input type=button value="mint!" onclick="mint()">
+<input type="button" value="mint!" onclick="mint()">
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.5/web3.min.js"></script>
