--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,13 @@
+<p><span id="web3_message">Loading web3...</span></p>
+<select id="mint_amount">
+  <option value="1">1</option>
+  <option value="2">2</option>
+  <option value="3">3</option>
+  <option value="4">4</option>
+</select>
 <input type=button value="mint!" onclick="mint()">
+<p>You have <span id="nft_balance"></span> NFTs</p>
 
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.5/web3.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="src/chaos_crocs.js"></script>
