--- a/client/index.html
+++ b/client/index.html
@@ -9,4 +9,4 @@
 <p>You have <span id="nft_balance"></span> NFTs</p>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.5/web3.min.js"></script>
-<script type="text/javascript" src="src/chaos_crocs.js"></script>
+<script type="text/javascript" src="src/contract_interaction.js"></script>
