--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
   <option value="3">3</option>
   <option value="4">4</option>
 </select>
-<input type=button value="mint!" onclick="mint()">
+<input type="button" value="mint!" onclick="mint()">
 <p>You have <span id="nft_balance"></span> NFTs</p>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.5/web3.min.js"></script>
