--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
 </select>
 <input type=button value="mint!" onclick="mint()">
 <p>You have <span id="nft_balance"></span> NFTs</p>
+<p><span id="total_mint"></span>/20 available</p>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.5/web3.min.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
