--- a/client/presale.html
+++ b/client/presale.html
@@ -1,3 +1,4 @@
+<input id="conect_button" type="button" value="connect" onclick="connectWallet()">
 <p><span id="web3_message">Loading web3...</span></p>
 <select id="mint_amount">
   <option value="1">1</option>
@@ -5,11 +6,10 @@
   <option value="3">3</option>
   <option value="4">4</option>
 </select>
-<input id="connect_button" type="button" value="connect" onclick="connect()">
-<h1>Presale mint</h1>
-<input type="button" value="mint!" onclick="mintPresale()">
-<p>You have <span id="nft_balance"></span> NFTs</p>
-<p><span id="total_mint"></span>/20 available</p>
+<input type=button value="mint!" onclick="mintPresale()">
+<p id="nft_balance">...</p>
+<p id="total_mint"></p>
+<p id="presale_price"></p>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.5/web3.min.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
