--- a/client/sale.html
+++ b/client/sale.html
@@ -1,4 +1,4 @@
-<input id="conect_button" type="button" value="connect" onclick="connectWallet()">
+<input id="connect_button" type="button" value="connect" onclick="connectWallet()">
 <p><span id="web3_message">Loading web3...</span></p>
 <select id="mint_amount">
   <option value="1">1</option>
