--- a/client/presale.html
+++ b/client/presale.html
@@ -1,4 +1,4 @@
-<input id="conect_button" type="button" value="connect" onclick="connectWallet()">
+<input id="connect_button" type="button" value="connect" onclick="connectWallet()">
 <p><span id="web3_message">Loading web3...</span></p>
 <select id="mint_amount">
   <option value="1">1</option>
@@ -8,7 +8,7 @@
 </select>
 <input type=button value="mint!" onclick="mintPresale()">
 <p id="nft_balance">...</p>
-<p id="total_mint"></p>
+<p id="total_mint_presale"></p>
 <p id="presale_price"></p>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.5/web3.min.js"></script>
