--- a/client/whitelist.html
+++ b/client/whitelist.html
@@ -6,7 +6,7 @@
   <option value="3">3</option>
   <option value="4">4</option>
 </select>
-<input type=button value="mint!" onclick="mint()">
+<input type=button value="mint!" onclick="mintWhitelist()">
 <p id="nft_balance">...</p>
 <p id="total_mint"></p>
 <p id="price"></p>
