--- a/client/whitelist.html
+++ b/client/whitelist.html
@@ -1,4 +1,5 @@
 <input id="connect_button" type="button" value="connect" onclick="connectWallet()">
+<p><span>vA</span></p>
 <p><span id="web3_message">Loading web3...</span></p>
 <select id="mint_amount">
   <option value="1">1</option>
@@ -11,5 +12,5 @@
 <p id="total_mint"></p>
 <p id="price"></p>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.5/web3.min.js"></script>
+<script type="text/javascript" src="src/web3.js"></script>
 <script type="text/javascript" src="src/funky_crocs.js"></script>
