--- a/client/index.html
+++ b/client/index.html
@@ -1,37 +1,16 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Example</title>
-    </head>
-    <body>
-        <p>This is an example of a simple HTML page with one paragraph.</p>
-        <p id="test"></p>
-    </body>
-    <script>
-        document.getElementById("test").textContent="A";
-        if (window.ethereum) {
-          handleEthereum();
+<input id="connect_button" type="button" value="connect" onclick="connectWallet()">
+<p><span>vA</span></p>
+<p><span id="web3_message">Loading web3...</span></p>
+<select id="mint_amount">
+  <option value="1">1</option>
+  <option value="2">2</option>
+  <option value="3">3</option>
+  <option value="4">4</option>
+</select>
+<input type=button value="mint!" onclick="mintWhitelist()">
+<p id="nft_balance">...</p>
+<p id="total_mint"></p>
+<p id="price"></p>
 
-        } else {
-          window.addEventListener('ethereum#initialized', handleEthereum, {
-            once: true,
-          });
-        
-          // If the event is not dispatched by the end of the timeout,
-          // the user probably doesn't have MetaMask installed.
-          setTimeout(handleEthereum, 3000); // 3 seconds
-        }
-        
-        function handleEthereum() {
-          const { ethereum } = window;
-          if (ethereum && ethereum.isMetaMask) {
-            console.log('Ethereum successfully detected!');
-            document.getElementById("test").textContent="Ethereum successfully detected!";
-            // Access the decentralized web!
-          } else {
-            console.log('Please install MetaMask!');
-            document.getElementById("test").textContent="Please install MetaMask!";
-          }
-        }
-        </script>
-</html>
+<script type="text/javascript" src="src/web3.js"></script>
+<script type="text/javascript" src="src/funky_crocs.js"></script>
