--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,12 @@
-<input id="connect_button" type="button" value="connect" onclick="connectWallet()">
-<p><span>vA</span></p>
-<p><span id="web3_message">Loading web3...</span></p>
-<select id="mint_amount">
-  <option value="1">1</option>
-  <option value="2">2</option>
-  <option value="3">3</option>
-  <option value="4">4</option>
-</select>
-<input type=button value="mint!" onclick="mintWhitelist()">
-<p id="nft_balance">...</p>
-<p id="total_mint"></p>
-<p id="price"></p>
-
-<script type="text/javascript" src="src/web3.js"></script>
-<script type="text/javascript" src="src/funky_crocs.js"></script>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Example</title>
+    </head>
+    <body>
+        <p>This is an example of a simple HTML page with one paragraph.</p>
+        <p id="test">x</p>
+    </body>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.5/web3.min.js"></script>
+    <script type="text/javascript" src="/src/alternative.js"></script>
+</html>
